Added more function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+
         <activity
             android:name=".AgreementActivity"
             android:label="@string/title_activity_agreement"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
